<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>uctf</name>
  <version>0.0.0</version>
  <description>Unmanned Capture The Flag.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
