<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>uctf</name>
  <version>0.0.0</version>
  <description>Unmanned Capture The Flag.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>protobuf-dev</build_depend>

  <exec_depend>ap_master</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_radar_plugin</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>opencv3</exec_depend>
  <exec_depend>rqt</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
